
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-887] Properly standardized POST/REQUEST access methods for element processors
- Fixed issues with user emails being sent in plaintext with no linebreaks; now HTML-based for the time being
- Package Download tree now disables already downloaded packages.
- [#MODX-885] Fixed missing break statement in cat output filter
- [#MODX-844] Fixed ucfirst output filter, added ucwords output filter
- [#MODX-869] Added missing descriptions for certain menu items
- [#MODX-868] Fixed bug on settings grid where filter box was not firing on enter key
- Fixed bug where hidemenu was not persisting in Quick Update Resource
- Fixed bug with tree mask rendering before panel is rendered
- [#MODX-747] Fixed issues with access grids update windows
- [#MODX-803] Fixed DOM issues with TV mgr input property renders
- [#MODX-805] Fixed attribute issues with TV web output renders
- [#MODX-859] Changed login page loader box to say 'Loading...' instead of 'Saving...'
- [#MODX-860] Fixed z-index issues across manager
- Added a custom loadMask to MODx.tree.Tree objects to display when they're loading but not affect page focus
- Added a custom loadMask to the Package Management download tree to display while loading the remote provider payload
- Added in icon for package files
- Added fsockopen as a fallback for transport package if allow_url_fopen or cURL is not enabled
- [#MODX-856] Added cURL method of grabbing transport packages when allow_url_fopen is set to false
- Fixed bug in property update where list grid was not hiding if list xtype was previously selected but not now
- Fixed import properties where it was not properly handling descriptions