@@ -4,6 +4,8 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added 'afterLayout', 'loadKeyMap', and 'loadAccordion' events to MODx.Layout
+- Fixed bugs with File TV input renders
 - [#MODX-887] Properly standardized POST/REQUEST access methods for element processors
 - Fixed issues with user emails being sent in plaintext with no linebreaks; now HTML-based for the time being
 - Package Download tree now disables already downloaded packages.
